# omniscidb

./: .gitignore  CMakeLists.txt  build-omnisci-debug.sh
Catalog/: Catalog.h  OptionsContainer.h  SessionInfo.h  SysCatalog.h
Cider/: CMakeLists.txt  CiderExecutionKernel.cpp  CiderExecutionKernel.h
DataMgr/: DataMgr.h  DataProvider.h
DataMgr/ForeignStorage/: FileReader.h  FileRegions.h  FsiJsonUtils.h
Distributed/os/: DistributedLoader.h  LeafAggregator.h
ImportExport/: ForeignDataImporter.cpp
LockMgr/: LegacyLockMgr.h
OSDependent/Unix/: CMakeLists.txt
QueryEngine/: CMakeLists.txt  CiderArrowResultProvider.h  CiderCodeGenerator.cpp  CiderCodeGenerator.h  CiderDagOptimizer.cpp  CiderExpressionRange.cpp  CiderGroupByAndAggregate.cpp  CiderGroupByAndAggregate.h  CiderRelAlgDispatcher.cpp  CiderRelAlgDispatcher.h  CiderRelAlgExecution.h  CiderRelAlgTranslator.cpp  CiderRelAlgTranslator.h  CiderResultProvider.cpp  CiderResultProvider.h  CiderWorkUnit.cpp  CiderWorkUnit.h  ColumnFetcher.cpp  ColumnFetcher.h  ColumnIR.cpp  Execute.h  ExtensionFunctions.hpp  GroupByAndAggregate.h  JsonAccessors.h  NativeCodegen.cpp  OModuler.cpp  OModuler.h  RelAlgDagBuilder.cpp  RelAlgDagBuilder.h  catalogApi.h
QueryEngine/Descriptors/: CiderQueryMemoryDescriptor.cpp  CiderQueryMemoryDescriptor.h  QueryMemoryDescriptor.cpp
QueryRunner/: QueryRunner.cpp  QueryRunner.h
SQLFrontend/: CommandFunctors.h
Shared/: MapDProgramOptions.h  json.h  toString.h
StringDictionary/: StringDictionary.cpp  StringDictionary.h  StringDictionaryClient.h
Tests/: CMakeLists.txt  CiderModuleTest.cpp  CodeGenIRTest.cpp  CompileWorkUnitTest.cpp  DataTransferBenchmark.cpp  IterativeExecutionTest.cpp  TestOModuler.cpp  VeloxFunctionTest.cpp
Tests/ExtensionFunctions/h3lib/: CMakeLists.txt
ThriftHandler/: CommandLineOptions.cpp  DBHandler.h  SystemValidator.h
java/: pom.xml
java/ciderJNI/: Makefile  pom.xml
java/ciderJNI/src/main/java/com/mapd/: CiderJNI.java
java/ciderJNI/src/main/native/: CMakeLists.txt  com_mapd_CiderJNI.cpp  com_mapd_CiderJNI.h
java/mapd/: pom.xml
java/mapdcommon/: pom.xml
java/omniscijdbc/: pom.xml
scripts/: build.sh  mapd-deps-ubuntu.sh  omnisci-env.sh
scripts/conda/: build.sh
